k8s/aliyun/k8s_01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: app-ns
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    name: myapp
