k8s/aliyun/k8s_01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: app-ns
spec:
  ingressClassName: nginx #default ingress class. optional
  rules:
    - http:
        paths:
          - backend:
              service:
                name: myapp-service
                port:
                  number: 80
            path: /
            pathType: Prefix
